...
                                <connections>
                                    <action selector="didTapShareButton" destination="VdN-h4-Nct" eventType="touchUpInside" id="zU9-Ur-j81"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VXA-WN-FfT" userLabel="BAck_Button">
                                <rect key="frame" x="8" y="70" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="59t-ER-ZCR"/>
                                    <constraint firstAttribute="width" constant="48" id="6BF-H1-Zss"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="Backward"/>
...
                                    <constraint firstAttribute="height" constant="60" id="1lU-rW-GVP"/>
                                    <constraint firstAttribute="width" constant="60" id="N1C-Tc-O1n"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qXs-h5-Jiu">
                                <rect key="frame" x="16" y="716" width="408" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="9Uf-KV-ngG"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
...
