...
    private var handledAuthorizationCode: String?

    override func viewDidLoad() {
        super.viewDidLoad()

        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"

        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
            options: [.new]
        ) { [weak self] _, change in
            guard let self else { return }
...
