//
//  ImageFeedUITests.swift
//  ImageFeedUITests
//
//  Created by Антон Абалуев on 19.03.2026.
//

import XCTest

final class ImageFeedUITests: XCTestCase {
    private let app = XCUIApplication()

    override func setUpWithError() throws {
        continueAfterFailure = false
        app.launch()
    }

    func testAuth() throws {
        // Given
        let webView = app.webViews["UnsplashWebView"]

        // When
        app.buttons["Authenticate"].tap()

        // Then
        XCTAssertTrue(webView.waitForExistence(timeout: 5))

        let loginTextField = webView.descendants(matching: .textField).element
        XCTAssertTrue(loginTextField.waitForExistence(timeout: 5))

        loginTextField.tap()
        loginTextField.typeText("")  // Введите ваш e-mail
        webView.swipeUp()

        let passwordTextField = webView.descendants(matching: .secureTextField).element
        XCTAssertTrue(passwordTextField.waitForExistence(timeout: 5))

        passwordTextField.tap()
        passwordTextField.typeText("")  // Введите ваш пароль
        webView.swipeUp()

        webView.buttons["Login"].tap()

        let tablesQuery = app.tables
        let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
        XCTAssertTrue(cell.waitForExistence(timeout: 5))
    }

    func testFeed() throws {
        // Given
        let tablesQuery = app.tables
        let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
        XCTAssertTrue(cell.waitForExistence(timeout: 5))

        // When
        cell.swipeUp()

        sleep(2)

        let cellToLike = tablesQuery.children(matching: .cell).element(boundBy: 1)
        cellToLike.buttons["like button off"].tap()
        sleep(2)
        cellToLike.buttons["like button on"].tap()

        sleep(2)

        cellToLike.tap()

        sleep(2)

        // Then
        let image = app.scrollViews.images.element(boundBy: 0)
        image.pinch(withScale: 3, velocity: 1)
        image.pinch(withScale: 0.5, velocity: -1)

        app.buttons["nav back button white"].tap()
    }

    func testProfile() throws {
        // Given
        sleep(3)
        app.tabBars.buttons.element(boundBy: 1).tap()

        // Then
        XCTAssertTrue(app.staticTexts[""].exists)   // Укажите ваше имя из профиля Unsplash
        XCTAssertTrue(app.staticTexts[""].exists)   // Укажите ваш @username из профиля Unsplash

        // When
        app.buttons["logout button"].tap()
        app.alerts["Bye bye!"].scrollViews.otherElements.buttons["Yes"].tap()

        // Then
        let authButton = app.buttons["Authenticate"]
        XCTAssertTrue(authButton.waitForExistence(timeout: 5))
    }
}
